# vidaPlus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 5d3f2967c090_add_appointment_and_user_tables.py  8c3397f482dd_add_supply_model.py  98db4254b6cb_add_unit_model.py  a3b775cab6dd_add_bed_model.py  af9d88bdba23_add_admission_model.py
tests/: conftest.py
tests/controllers/: test_admissions.py  test_appointments.py  test_auth.py  test_beds.py  test_healthcare_professionals.py  test_patients.py  test_stock.py  test_units.py
vidaplus/: run.py  settings.py
vidaplus/controllers/: admissions.py  appointments.py  auth.py  beds.py  healthcare_professionals.py  patients.py  stock.py  units.py
vidaplus/main/: exceptions.py
vidaplus/main/enums/: appointment_status.py  appointment_types.py  bed_status.py  bed_types.py  roles.py
vidaplus/main/schemas/: admission.py  appointment.py  auth.py  bed.py  supply.py  unit.py  user.py
vidaplus/models/config/: connection.py
vidaplus/models/entities/: __init__.py  admission.py  appointment.py  bed.py  supply.py  unit.py  user.py
vidaplus/models/repositories/: admission_repository.py  appointment_repository.py  bed_repository.py  supply_repository.py  unit_repository.py  user_repository.py
vidaplus/models/repositories/interfaces/: admission_repository_interface.py  (+5 more)
vidaplus/services/: admission_service.py  appointment_service.py  auth_service.py  bed_service.py  supply_service.py  unit_service.py  user_service.py
